--- a/.ci/requirements.txt
+++ b/.ci/requirements.txt
@@ -1,7 +1,9 @@
+annotated-types==0.6.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 certifi==2023.7.22 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 charset-normalizer==3.3.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 idna==3.4 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
-pydantic==1.10.13 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+pydantic-core==2.10.1 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
+pydantic==2.4.2 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 requests==2.31.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 typing-extensions==4.8.0 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
 urllib3==2.0.6 ; python_full_version >= "3.8.1" and python_full_version < "4.0.0"
