--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,15 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8.1"
+python = "^3.10"
 requests = "^2.31.0"
 pydantic = "^2.4"
 
 [tool.poetry.group.dev.dependencies]
 types-requests = "^2.31.0.8"
 flake8 = "^6.1.0"
+requests-mock = "^1.11.0"
+pytest = "^7.4.2"
 
 [tool.poetry.group.folium]
 optional = true
