--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ optional = true
 
 [tool.poetry.group.folium.dependencies]
 folium = "^0.14.0"
+requests-mock = "^1.11.0"
+jinja2 = "^3.1.3"
 
 [build-system]
 requires = ["poetry-core"]
