--- a/.ci/requirements.txt
+++ b/.ci/requirements.txt
@@ -1,9 +1,16 @@
 annotated-types==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
+branca==0.7.1 ; python_version >= "3.10" and python_version < "4.0"
 certifi==2024.2.2 ; python_version >= "3.10" and python_version < "4.0"
 charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "4.0"
+folium==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
 idna==3.6 ; python_version >= "3.10" and python_version < "4.0"
+jinja2==3.1.3 ; python_version >= "3.10" and python_version < "4.0"
+markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "4.0"
+numpy==1.26.4 ; python_version >= "3.10" and python_version < "4.0"
 pydantic-core==2.16.2 ; python_version >= "3.10" and python_version < "4.0"
 pydantic==2.6.1 ; python_version >= "3.10" and python_version < "4.0"
+requests-mock==1.11.0 ; python_version >= "3.10" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.10" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.9.0 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==2.2.0 ; python_version >= "3.10" and python_version < "4.0"
