Create an index, linking to both pages

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Build map
         run: |
           cp .ci/index.html ./build
+          cp .ci/api.html ./build
           python folium_example.py -d build/dump.json -o build/map.html
 
       - name: Upload artifact
